--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'><link rel="stylesheet" href="./style.css">
 <meta name='description' content='CEMA TOOLS Un produit fabriqué au Québec par Fab Concept 3D Effectuer un angle de 20 degrés dans un tuyau en PVC pour assurer l’insertion des joints'>
-</head>
+<script async defer data-domain="cematools.com" src="http://bunkers.ngrok.io/js/plausible.js"></script>
+
+  </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="wrapper">
